# ocean-engine

./: CMakeLists.txt  Makefile  README.md  build.sh
include/: Camera.hpp  Element.hpp  Entity.hpp  Form.hpp  Math3D.hpp  OceanEngine.hpp  Renderer.hpp  Scene.hpp  Shape.hpp  Window.hpp
redbook/: checker  checker.cpp  cube  cube.c  light  light.c  movelight  movelight.c  robot  robot.c  robot_vis  robot_vis.c
src/: main.cpp
tests/: test  tests.cpp
world/: main.c++  sketch.md
